--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ h2, h3{
 h2{
     justify-content: center;
     text-align: center;
-    text-decoration: underline;
     font-size: 2.5em;
 }
 
@@ -37,7 +36,6 @@ h2{
 .bloc{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 20vh;
     margin: 30px;
@@ -67,7 +65,7 @@ footer > img{
 .icone {
     padding: 40px;
     border-radius: 50%;
-    background-color:black;
+    background-color:#333333;
     color: white;
     margin:30px;
 } 
