--- a/style.css
+++ b/style.css
@@ -2,25 +2,106 @@
     margin: 0;
     padding: 0;
 }
-
-.Top{
+@font-face {
+    font-family: "halfings";
+    src: url("./fonts/glyphicons-halflings-regular.woff2") format("Woff2"),
+        url("./fonts/glyphicons-halflings-regular.ttf") format("truetype"),
+}
+/*Header*/
+header{
     background-color: rgb(19, 18, 18);
+    padding: 30px;   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    opacity: 60%;
+    margin-right: 15px;
     text-align: right;
 }
 
-header{
+.header{
     background-image: url(./images/hero-image.jpg);
     height: 100vh;
-    text-align: center;
     background-size: 170%;
     color: #fafafa;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.header > h1{
+    font-family: 'PT Serif Caption', serif ;
+    font-size:450%;
+    text-align: center;
+    margin-top: 30px;
+}
+.header > p{
+    width: 80%;
+    font-size: 180%;
+    font-family: "halfing", sans-serif;
+    opacity: 80%;
+    text-align: center;
+    margin-top: 40px;
+    line-height: 40px;
+
+}
+.header >img {
+    width: 10%;
+    margin-top: 60px;
+
 }
 
-button{
-    background-color: red;
+.header >button{
+    background-color: #E74C3C;
+    height: 100px;
+    width: 300px;
     color: #fafafa;
+    font-size: 40px;
+    padding: 6px;
+    border-radius: 7px;
+    margin-top: 30px;
 }
 
-footer{
+
+/*Section 1*/
+
+.whoweare{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-family: "halfing", sans-serif;
+    text-align: center;
+    
+
+}
+.whoweare > img{
+    width: 25vh;
+    margin-bottom: 30px;
+}
+.whoweare > p{
+    font-size: xx-large;
+    line-height: 40px;
+}
+.whoweare > p > span{
+    color:#E74C3C ;
+}
+h2{
+    color:#E74C3C ;
+    font-size: xx-large;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+h2:after{
+    display: block;
+    height: 1.5px;
+    background-color: #E74C3C;
+    width: 160px;
+    content: "";
+    margin:0 auto;
+    margin-top: 10px;
     
 }
