--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 section {
-padding: 26px
+padding: 30px
 }
 
 section:nth-of-type(2n){
@@ -30,6 +30,7 @@ h2{
     border-radius: 4px;
     padding: 7px;
     margin: 10px;
+    font-weight: 780;
 }
 
 
@@ -46,9 +47,8 @@ h2{
 .corpse {
     display: flex;
     justify-content:space-around;
-    
+    text-align: center;
 }
-
 
 footer{
     display: flex;
@@ -60,6 +60,7 @@ footer{
 
 footer > img{
     width: 20%;
+    padding-left: 100px;
 }
 
 .icone {
@@ -75,17 +76,10 @@ i {
     font-size: 60px;
 }
 
-.oneMillion {
-    height: 80px;
-}
-
-footer :last-child{
-    width: 60px;
-    border-radius: 50px;
+.chevron {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
     background-color: #333333;
-    color: #f74c3c;
-}
-
-.bloc :p {
-text-align: center;    
+    border-radius: 50px;
 }
