--- a/style.css
+++ b/style.css
@@ -8,16 +8,17 @@
     src: url("./fonts/glyphicons-halflings-regular.woff2") format("Woff2"),
         url("./fonts/glyphicons-halflings-regular.ttf") format("truetype"),
 }
+
 /*Header*/
-header{
+header {
     background-color: rgb(19, 18, 18);
-    padding: 30px;   
+    padding: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-a{
+a {
     text-decoration: none;
     color: white;
     opacity: 60%;
@@ -25,7 +26,7 @@ a{
     text-align: right;
 }
 
-.header{
+.header {
     background-image: url(./images/hero-image.jpg);
     height: 100vh;
     background-size: 170%;
@@ -33,49 +34,52 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
 
 
 section {
-padding: 30px
+    padding: 30px
 }
 
-section:nth-of-type(2n){
+section:nth-of-type(2n) {
     background-color: #f5f5f5;
 
 }
 
-h3{
+h3 {
     color: #f74c3c;
     font-family: 'PT Serif Caption', serif;
-    }
+}
 
 
-.header > h1{
-    font-family: 'PT Serif Caption', serif ;
-    font-size:450%;
+.header>h1 {
+    font-family: 'PT Serif Caption', serif;
+    font-size: 450%;
     text-align: center;
     margin-top: 30px;
+    max-width: 16em;
 }
-.header > p{
-    width: 80%;
-    font-size: 180%;
+
+.header>p {
+    font-size: 150%;
     font-family: "halfing", sans-serif;
     opacity: 80%;
     text-align: center;
     margin-top: 40px;
     line-height: 40px;
-
+    max-width: 43em;
 
 }
-.header >img {
+
+.header>img {
     width: 10%;
     margin-top: 60px;
 
 }
 
-.header >button{
+.header>button {
     background-color: #E74C3C;
-    height: 100px;
+    height: 80px;
     width: 300px;
     color: #fafafa;
     font-size: 40px;
@@ -87,43 +91,48 @@ h3{
 
 /*Section 1*/
 
-.whoweare{
+.whoweare {
     margin-top: 50px;
     margin-bottom: 50px;
     font-family: "halfing", sans-serif;
     text-align: center;
-    
+
 
 }
-.whoweare > img{
+
+.whoweare>img {
     width: 25vh;
     margin-bottom: 30px;
 }
-.whoweare > p{
+
+.whoweare>p {
     font-size: xx-large;
     line-height: 40px;
 }
-.whoweare > p > span{
-    color:#E74C3C ;
+
+.whoweare>p>span {
+    color: #E74C3C;
 }
-h2{
-    color:#E74C3C ;
+
+h2 {
+    color: #E74C3C;
     font-size: xx-large;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 30px;
 }
-h2:after{
+
+h2:after {
     display: block;
     height: 1.5px;
     background-color: #E74C3C;
     width: 160px;
     content: "";
-    margin:0 auto;
+    margin: 0 auto;
     margin-top: 10px;
-    
+}
 
-.button2{
+.button2 {
     background-color: rgb(255, 255, 255);
     color: #f74c3c;
     border-color: rgba(128, 128, 128, 0.747);
@@ -134,11 +143,11 @@ h2:after{
 }
 
 
-.bloc{
+.bloc {
+    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20vh;
     margin: 30px;
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
@@ -146,11 +155,12 @@ h2:after{
 
 .corpse {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     text-align: center;
+    padding: 50px;
 }
 
-footer{
+footer {
     display: flex;
     justify-content: space-between;
     background-color: #f74c3c;
@@ -158,7 +168,7 @@ footer{
     padding-top: 175px;
 }
 
-footer > img{
+footer>img {
     width: 20%;
     padding-left: 100px;
 }
@@ -166,10 +176,10 @@ footer > img{
 .icone {
     padding: 40px;
     border-radius: 50%;
-    background-color:#333333;
+    background-color: #333333;
     color: white;
-    margin:30px;
-} 
+    margin: 30px;
+}
 
 i {
     justify-content: center;
@@ -182,5 +192,41 @@ i {
     right: 10px;
     background-color: #333333;
     border-radius: 50px;
+
+}
+
+/* Media queries */
+
+@media screen and (max-width :991px) {
+   header > img {
+    padding-left: 100px;
+   }
+
+   header > nav {
+    padding-right: 100px;
+   }
+   
+    .header>h1 {
+        font-size: 300%;
+    }
+
+    .header {
+        background-size: 293%;
+        height: 92vh;
+    }
+
+    .header>p {
+        max-width: 36em;
+    }
+
+    s .header>img {
+        width: 15%;
+    }
+
+    .corpse {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
 
 }
